--- a/CNN/trainfer.ipynb
+++ b/CNN/trainfer.ipynb
@@ -168,32 +168,32 @@
         "outputId": "f66ec668-5ab3-4f6f-afda-add5400dc354"
       },
       "source": [
-        "num_features=64\n",
+        "nb_features=64\n",
         "\n",
         "\n",
         "model = Sequential()\n",
         "\n",
-        "model.add(Conv2D(num_features, kernel_size=(3, 3), activation='relu', input_shape=(48, 48, 1), kernel_regularizer=l2(0.01)))\n",
+        "model.add(Conv2D(nb_features, kernel_size=(3, 3), activation='relu', input_shape=(48, 48, 1), kernel_regularizer=l2(0.01)))\n",
         "model.add(BatchNormalization())\n",
-        "model.add(Conv2D(num_features, kernel_size=(3, 3), activation='relu'))\n",
-        "model.add(BatchNormalization())\n",
-        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-        "model.add(Dropout(0.4))\n",
-        "\n",
-        "model.add(Conv2D(2*num_features, kernel_size=(3, 3), activation='relu'))\n",
-        "model.add(BatchNormalization())\n",
-        "model.add(Conv2D(2*num_features, kernel_size=(3, 3), activation='relu'))\n",
+        "model.add(Conv2D(nb_features, kernel_size=(3, 3), activation='relu'))\n",
         "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
         "model.add(Dropout(0.4))\n",
         "\n",
-        "model.add(Conv2D(2*2*num_features, kernel_size=(3, 3), activation='relu'))\n",
+        "model.add(Conv2D(2*nb_features, kernel_size=(3, 3), activation='relu'))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(Conv2D(2*nb_features, kernel_size=(3, 3), activation='relu'))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
+        "model.add(Dropout(0.4))\n",
+        "\n",
+        "model.add(Conv2D(2*2*nb_features, kernel_size=(3, 3), activation='relu'))\n",
         "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
         "model.add(Dropout(0.4))\n",
         "model.add(Flatten())\n",
         "\n",
-        "model.add(Dense(num_features, activation='relu'))\n",
+        "model.add(Dense(nb_features, activation='relu'))\n",
         "model.add(BatchNormalization())\n",
         "model.add(Dropout(0.3))\n",
         "model.add(Dense(5, activation='softmax'))\n",
